--- a/grpc_test/Cargo.toml
+++ b/grpc_test/Cargo.toml
@@ -1,12 +1,11 @@
 [package]
-name = "transaction"
+name = "grpc_test"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-chrono = { version = "0.4.31", features = ["serde"] }
 prost = "0.12.1"
 tokio = { version = "1.33.0", features = ["full"] }
 tonic = "0.10.2"
