--- a/transaction/Cargo.toml
+++ b/transaction/Cargo.toml
@@ -8,6 +8,9 @@ edition = "2021"
 [dependencies]
 chrono = { version = "0.4.31", features = ["serde"] }
 prost = "0.12.1"
+redis = "0.23.3"
+serde = { version = "1.0.192", features = ["serde_derive", "derive"] }
+serde_json = "1.0.108"
 tokio = { version = "1.33.0", features = ["full"] }
 tonic = "0.10.2"
 
