--- a/transaction/Cargo.toml
+++ b/transaction/Cargo.toml
@@ -13,6 +13,7 @@ serde = { version = "1.0.192", features = ["serde_derive", "derive"] }
 serde_json = "1.0.108"
 tokio = { version = "1.33.0", features = ["full"] }
 tonic = "0.10.2"
+uuid = { version = "1.5.0", features = ["v4"] }
 
 [build-dependencies]
 tonic-build = "0.10.2"
