feat: added tailwindcss and templ server

--- a/transaction/Dockerfile
+++ b/transaction/Dockerfile
@@ -2,6 +2,10 @@ FROM rust:latest as builder
 
 WORKDIR /usr/src/app
 
+RUN apt update && apt install -y protobuf-compiler
+
+COPY ../proto /usr/src/proto
+
 COPY . .
 
 RUN cargo build --release
@@ -14,6 +18,8 @@ RUN if [ "$PACKAGE_NAME" = "" ]; then \
     echo "PACKAGE_NAME is not set"; \
     exit 1; \
     fi
+
+RUN apk add --no-cache protoc
 
 WORKDIR /usr/src/app
 
