--- a/frontend/.air.toml
+++ b/frontend/.air.toml
@@ -8,10 +8,10 @@ tmp_dir = "tmp"
   pre_cmd = []
   cmd = "templ generate && npx tailwindcss -o ./assets/styles.css --minify && go build -o ./tmp/main ."
   post_cmd = []
-  delay = 1000
+  delay = 2000
   exclude_dir = ["assets", "tmp", "vendor", "testdata"]
   exclude_file = []
-  exclude_regex = ["_test.go"]
+  exclude_regex = ["_test.go", "_templ.go"]
   exclude_unchanged = false
   follow_symlink = false
   full_bin = ""
@@ -23,7 +23,7 @@ tmp_dir = "tmp"
   poll = false
   poll_interval = 0
   rerun = false
-  rerun_delay = 500
+  rerun_delay = 1000 
   send_interrupt = false
   stop_on_error = true 
 
