--- a/transaction/Dockerfile
+++ b/transaction/Dockerfile
@@ -4,26 +4,20 @@ WORKDIR /usr/src/app
 
 RUN apt update && apt install -y protobuf-compiler
 
-COPY ../proto /usr/src/proto
+COPY ./proto /usr/src/proto
 
-COPY . .
+COPY ./transaction .
 
 RUN cargo build --release
 
 FROM alpine:latest as production
 
-ARG PACKAGE_NAME
-
-RUN if [ "$PACKAGE_NAME" = "" ]; then \
-    echo "PACKAGE_NAME is not set"; \
-    exit 1; \
-    fi
-
 RUN apk add --no-cache protoc
 
 WORKDIR /usr/src/app
 
-COPY --from=builder /usr/src/app/target/release/${PACKAGE_NAME} .
+RUN apt-get update && apt-get install -y extra-runtime-dependencies && rm -rf /var/lib/apt/lists/*
+COPY --from=builder /usr/src/app/target/release/transaction .
 
-CMD ["./$PACKAGE_NAME"]
+CMD ["./transaction"]
 
