--- a/import/Cargo.toml
+++ b/import/Cargo.toml
@@ -6,4 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+axum = { version = "0.7.3", features = ["multipart"] }
 clap = { version = "4.4.13", features = ["derive"] }
+csv = "1.3.0"
+serde = { version = "1.0.195", features = ["derive"] }
+tokio = { version = "1.35.1", features = ["full"] }
