--- a/expr/Cargo.toml
+++ b/expr/Cargo.toml
@@ -10,5 +10,7 @@ axum = { version = "0.7.4", features = ["multipart"] }
 clap = { version = "4.4.18", features = ["derive"] }
 csv = "1.3.0"
 redis = "0.24.0"
+serde = { version = "1.0.195", features = ["derive"] }
+serde_json = "1.0.111"
 tokio = { version = "1.35.1", features = ["full"] }
 uuid = { version = "1.7.0", features = ["v4"] }
