--- a/expr/Cargo.toml
+++ b/expr/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 axum = { version = "0.7.4", features = ["multipart"] }
+chrono = { version = "0.4.33", features = ["serde"] }
 clap = { version = "4.4.18", features = ["derive"] }
 csv = "1.3.0"
 redis = "0.24.0"
