--- a/expr/Cargo.toml
+++ b/expr/Cargo.toml
@@ -6,12 +6,13 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-axum = { version = "0.7.4", features = ["multipart"] }
+axum = { version = "0.7.4", features = ["multipart", "macros"] }
 chrono = { version = "0.4.33", features = ["serde"] }
 clap = { version = "4.4.18", features = ["derive"] }
 csv = "1.3.0"
 redis = "0.24.0"
 serde = { version = "1.0.195", features = ["derive"] }
 serde_json = "1.0.111"
+sqlx = { version = "0.7.3", features = ["postgres"] }
 tokio = { version = "1.35.1", features = ["full"] }
 uuid = { version = "1.7.0", features = ["v4"] }
