--- a/compose.yml
+++ b/compose.yml
@@ -10,6 +10,7 @@ services:
       - "50051:50051"
     networks:
       - redis_network
+      - postgres_network
   redis:
     image: redis/redis-stack
     ports:
@@ -17,8 +18,24 @@ services:
       - "13333:8001"
     networks:
       - redis_network
+  postgres:
+    image: postgres
+    restart: always
+    ports:
+      - "5432:5432"
+    environment:
+      POSTGRES_PASSWORD: password
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    networks:
+      - postgres_network
+
+volumes:
+  postgres_data: {}
 
 networks:
   redis_network:
+    driver: bridge
+  postgres_network:
     driver: bridge
 
