--- a/expr/Cargo.toml
+++ b/expr/Cargo.toml
@@ -3,8 +3,6 @@ name = "expr"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
 axum = { version = "0.7.4", features = ["multipart", "macros"] }
 chrono = { version = "0.4.33", features = ["serde"] }
@@ -13,6 +11,6 @@ csv = "1.3.0"
 redis = "0.24.0"
 serde = { version = "1.0.195", features = ["derive"] }
 serde_json = "1.0.111"
-sqlx = { version = "0.7.3", features = ["postgres"] }
+sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio", "tls-rustls", "chrono", "uuid", "time"] }
 tokio = { version = "1.35.1", features = ["full"] }
 uuid = { version = "1.7.0", features = ["v4"] }
