--- a/expr/Cargo.toml
+++ b/expr/Cargo.toml
@@ -13,5 +13,7 @@ serde = { version = "1.0.195", features = ["derive"] }
 serde_json = "1.0.111"
 sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio", "tls-rustls", "chrono", "uuid", "time"] }
 tokio = { version = "1.35.1", features = ["full"] }
-tower-http = { version = "0.5.1", features = ["cors"] }
+tower-http = { version = "0.5.1", features = ["trace"] }
+tracing = "0.1.40"
+tracing-subscriber = { version = "0.3.18", features = ["tracing"] }
 uuid = { version = "1.7.0", features = ["v4"] }
