--- a/expr/Cargo.toml
+++ b/expr/Cargo.toml
@@ -15,5 +15,5 @@ sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio", "tls-rustls
 tokio = { version = "1.35.1", features = ["full"] }
 tower-http = { version = "0.5.1", features = ["trace"] }
 tracing = "0.1.40"
-tracing-subscriber = { version = "0.3.18", features = ["tracing"] }
+tracing-subscriber = { version = "0.3.18", features = ["tracing", "env-filter"] }
 uuid = { version = "1.7.0", features = ["v4"] }
